fixed navbar and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,22 @@ body {
 
 .navbar {
     background-color: #32CD32;
-    padding: 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+.navbar-brand {
+    margin-top: -3%;
+    margin-bottom: -3%;
+}
+.nav-button {
+    width: 20%;
+}
 .nav-links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
-    gap: 2rem;
+    list-style: none;
+    width: 36%;
+    gap: 3rem;
 }
 .nav-links a {
     color: white;
@@ -35,10 +40,10 @@ body {
     color: #FFF07C;
     font-size: 3em;
     text-transform: uppercase;
-    margin-top: -3%;
+    margin-top: -5%;
 }
 .motto {
-    margin-top: -3%;
+    margin-top: -5%;
 }
 .intro-premise {
     text-align: center;
@@ -53,7 +58,6 @@ h1 {
     text-align: center;
     color: #FFF07C;
     margin-top: 4%;
-    /* margin-bottom: -2%; */
 }
 
 h2 {
@@ -226,7 +230,7 @@ button:hover {
     justify-content: center;
     margin: auto;
     margin-top: 15px;
-    margin-bottom: 20px;
+    margin-bottom: -15%;
     border: solid black 5px;
     border-radius: 5px;
     height: 3em;
